[package]
name = "jem-icon"
version = "0.0.1"
authors = ["Kyu Yeon 'rebel' Lee"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
cmake = "0.1"
imageproc = "0.22.0"
image = "0.23.14"
rusttype = "0.9.2"
clap = "3.0.0-beta.2"

[profile.release]
debug = false
